[tool.poetry]
name = "HW12-Contacts"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m11_02"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.3"
alembic = "^1.9.3"
psycopg2 = "^2.9.5"
uvicorn = {extras = ["standart"], version = "^0.20.0"}
pydantic = {extras = ["email"], version = "^2.4.2"}
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
faker = "^19.13.0"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
